--- a/page-5-dinaz.html
+++ b/page-5-dinaz.html
@@ -156,7 +156,7 @@ article {
     <div class="panel"></div>
       <p>There are a lot of benefits, although further studies are being done.
         Binaural beats, Monaural Beats, Isochronic tones, and visual entrainments
-        help peope with neurological diseases as well as anxiety, depression,
+        help people with neurological diseases as well as anxiety, depression,
         insomnia, trauma, memory, pain mamagement, and so much more.
         For people who already have holistic lifestyles and do yoga, tai chi,
         chi gong, or meditation, these entrainment methods can enhance 
